--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "vercel-build": "echo hello"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
     "nodemailer-sendgrid": "^1.0.3",
